# battleship

./: .gitignore  .travis.yml  LICENSE  README.md  battleship-api-dev.txt  favicon.xcf  help.xcf  icons.xcf  other.xcf  stack.yaml
bot/: .gitignore  ChangeLog.md  LICENSE  battleship-bot.cabal  devel.bot.cfg.template  rules.json
bot/src/: Main.hs  Play.hs  Types.hs
client/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json  tslint.json
client/public/: index.html  manifest.json
client/src/: Battleships.css  Battleships.test.tsx  Battleships.tsx  index.css  index.scss  index.tsx  registerServiceWorker.ts  types.d.ts
client/src/AreYouSurePopupWidget/: AreYouSurePopup.module.scss  AreYouSurePopup.scss  AreYouSurePopup.test.tsx  AreYouSurePopup.tsx  index.ts
client/src/BottomWidget/: Bottom.module.scss  Bottom.scss  Bottom.test.tsx  Bottom.tsx  index.ts
client/src/ChatWidget/: Chat.scss  Chat.test.tsx  Chat.tsx  index.ts
client/src/ConfigurableSeaWidget/: ConfigurableSea.css  ConfigurableSea.test.tsx  ConfigurableSea.tsx  index.ts
client/src/CreateGamePopupWidget/: CreateGamePopup.css  CreateGamePopup.module.scss  CreateGamePopup.scss  CreateGamePopup.test.tsx  CreateGamePopup.tsx  index.ts
client/src/CreateGameWidget/: CreateGame.module.scss  CreateGame.scss  CreateGame.test.tsx  CreateGame.tsx  index.ts
client/src/CreateMessageWidget/: CreateMessage.css  CreateMessage.test.tsx  CreateMessage.tsx  index.ts
client/src/EmptySeaWidget/: EmptySea.css  EmptySea.test.tsx  EmptySea.tsx  index.ts
client/src/EnemySea/: EnemySea.css  EnemySea.tsx
client/src/EnemySeaWidget/: EnemySea.scss  EnemySea.test.tsx  EnemySea.tsx  index.ts
client/src/Footer/: Footer.css  Footer.tsx
client/src/FooterWidget/: Footer.css  Footer.module.scss  Footer.scss  Footer.test.tsx  Footer.tsx
client/src/GuestSeaWidget/: GuestSea.scss  GuestSea.test.tsx  GuestSea.tsx  index.ts
client/src/GuestsListWidget/: GuestsList.scss  GuestsList.test.tsx  GuestsList.tsx  index.ts
client/src/GuestsWidget/: Guests.scss  Guests.test.tsx  Guests.tsx  index.ts
client/src/HeaderWidget/: Header.module.scss  Header.scss  Header.test.tsx  Header.tsx
client/src/HelpWidget/: Help.module.scss  Help.scss  Help.test.tsx  Help.tsx
client/src/InviteBotPopupWidget/: InviteBotPopup.module.scss  InviteBotPopup.scss  InviteBotPopup.test.tsx  InviteBotPopup.tsx  index.ts
client/src/JoinPopupWidget/: JoinPopup.css  JoinPopup.module.scss  JoinPopup.scss  JoinPopup.test.tsx  JoinPopup.tsx  index.ts
client/src/LoaderWidget/: Loader.css  Loader.module.scss  Loader.scss  Loader.test.tsx  Loader.tsx  index.ts
client/src/MakeGamePublicPopupWidget/: MakeGamePublicPopup.module.scss  MakeGamePublicPopup.scss  MakeGamePublicPopup.test.tsx  MakeGamePublicPopup.tsx  index.ts
client/src/MessageListWidget/: MessageList.css  MessageList.test.tsx  MessageList.tsx  index.ts
client/src/MySea/: MySea.css  MySea.test.tsx  MySea.tsx  index.ts
client/src/MySeaWidget/: MySea.scss  MySea.tsx
client/src/PublicGamesListWidget/: PublicGamesList.css  PublicGamesList.module.scss  PublicGamesList.scss  PublicGamesList.test.tsx  PublicGamesList.tsx  index.ts
client/src/Sea/: index.ts
client/src/SeaWidget/: Sea.module.scss  Sea.scss  Sea.test.tsx  Sea.tsx
client/src/Settings/: Settings.css  Settings.test.tsx  Settings.tsx
client/src/TitleWidget/: Title.module.scss  Title.scss  Title.test.tsx  Title.tsx
client/src/Utils/: Utils.tsx
deploy/: Dockerfile  build.sh  deploy.sh  docker-compose.yml
server/: .gitignore  battleship.cabal  bots.template.json  devel.cfg.template  env.template  prepare_with_ssl.sh  rules.json  run.sh  run_ssl.sh
server/src/: Application.hs  Main.hs  Site.hs  Types.hs  devel.cfg.template
server/src/Api/Services/: GameService.hs
server/src/api/: Core.hs  Types.hs
server/src/api/services/: GameService.hs
