Name:                battleship
Version:             1.0
Synopsis:            Battleship
Description:         Battleship Game server
License:             MIT
Author:              Dima Kurilo
Maintainer:          dkurilo@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode. Doesn't work now. Hope will be fixed soon.
  Default: False

Executable battleship
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Api.Core, Api.Services.GameService, Api.Types, Application, Site

  Build-depends:
    base                      >= 4,
    bytestring                >= 0.9.1   && < 0.11,
    mtl                       >= 2       && < 3,
    heist                     >= 1.0     && < 2,
    text                      >= 1.2.1   && < 1.3,
    aeson                     >= 1.3     && < 1.5,
    snap                      >= 1.0     && < 2,
    snap-core                 >= 1.0     && < 2,
    snap-server               >= 1.0     && < 2,
    snap-loader-static        >= 1.0     && < 2,
    lens                      >= 4.16    && < 5.0,
    mongoDB                   >= 2.4     && < 3,
    configurator              >= 0.3     && < 0.4,
    bson                      >= 0.3     && < 0.4,
    uuid                      >= 1.3     && < 1.4,
    time                      >= 1.8     && < 2.0

  if flag(development)
    build-depends:
      snap-loader-dynamic == 1.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
